<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="key_native_language">US - English</string>
	<string name="notification_monthbefore">Your next week of testing begins in one month on {DATE}. You may adjust this schedule up to 7 days.</string>
	<string name="notification_weekbefore">Reminder: Your next testing cycle starts in one week. Tap to confirm or reschedule.</string>
	<string name="notification_daybefore">Reminder: Your next testing cycle begins tomorrow. Tap to confirm or reschedule.</string>
	<string name="notification1_firstday">It\'s time for the first test of the week! Start your streak by completing this test by {TIME}.</string>
	<string name="notification1_default">It\'s time for the first test of the day! This test will be available until {TIME}.</string>
	<string name="notification1_halfway">You\'re halfway through the week. Keep it up! Today\'s first test will be available until {TIME}.</string>
	<string name="notification1_lastday">You\'re on the last day of testing this week! Your first test of the day will be available until {TIME}.</string>
	<string name="notifications2_default">It\'s time for today\'s second test! This test will be available until {TIME}.</string>
	<string name="notification3_default">Your third test of the day is now available. Please complete this test by {TIME}.</string>
	<string name="notification3_variation"></string>
	<string name="notification4_default">The last test of the day is here! Finish strong by completing this test by {TIME}.</string>
	<string name="notification4_lastday">It\'s time to take your last test of the week! Please finish it by {TIME}. Your coordinator will contact you about your earnings shortly.</string>
	<string name="notification_missedtests">You\'ve missed your tests. If you\'re unable \nto finish this week, please contact your study coordinator.</string>
	<string name="notification_testproctor_header">Test Scheduler Service Running</string>
	<string name="notification_testproctor_body">This ensures that you\'re notified of tests at the correct time.</string>
	<string name="dateshift_picker">What week are you able to test?</string>
	<string name="dateshift_confirmation">Great! Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>.</string>
	<string name="language_prefer">Please select your &lt;b>preferred language&lt;/b>.</string>
	<string name="gen_welcome_key">Welcome to the &lt;b>ARC App&lt;/b></string>
	<string name="bysigning_key">By signing in you agree to our</string>
	<string name="privacy_linked">Privacy Policy</string>
	<string name="about_linked">About This App</string>
	<string name="login_enter_raterID"></string>
	<string name="login_enter_ARCID">Please enter your &lt;b>ARC ID&lt;/b> below:</string>
	<string name="login_confirm_ARCID">To confirm, please &lt;b>re-enter your ARC ID:&lt;/b></string>
	<string name="login_problems_linked">&lt;b>Problems logging in?&lt;/b></string>
	<string name="login_enter_2FA">Please enter your &lt;b>login verification code&lt;/b>.</string>
	<string name="login_2FA_body">We\'ve sent a security code to your phone with number ending in &lt;b>{##}&lt;/b>.</string>
	<string name="login_problems_2FA">Didn\'t receive code?</string>
	<string name="login_resend_header">Resend code?</string>
	<string name="login_resend_subheader">Keep in mind that it might take a few minutes to receive your security code.</string>
	<string name="login_2FA_text">Your ARC security code is {######}.</string>
	<string name="login_2FA_morehelp_linked">I need more help</string>
	<string name="onboarding_header">Testing Commitment</string>
	<string name="onboarding_body">Every six months, you will be asked to complete &lt;b>one week&lt;/b> of cognitive tests. During the week, you will be reminded &lt;b>4 times a day&lt;/b> to complete tests within the app. You may be in the study for as long as &lt;b>5 years&lt;/b> (10 weeks of testing).</string>
	<string name="radio_understand"></string>
	<string name="radio_commit">I commit to participate for the length of the study</string>
	<string name="radio_nocommit">I\'m NOT able to commit to this study</string>
	<string name="onboarding_nocommit_header">&lt;b>Thank you for your time.&lt;/b></string>
	<string name="onboarding_nocommit_body">Thank you for letting us know you are not able to commit to the study at this time. If you need any questions answered before continuing with the study, please contact the study team by clicking HELP in the upper right hand corner of the screen.</string>
	<string name="onboarding_nocommit_landing_header">Study Participation</string>
	<string name="onboarding_nocommit_landing_body">To participate in the ARC study, you must commit to the required testing schedule. You previously indicated that you were unable to do so.&lt;br />&lt;br />If you\'d like to participate, tap Next to review the requirements. If you\'d like to leave the study, please contact your study coordinator.</string>
	<string name="onboarding_commit_header">Thank you!</string>
	<string name="onboarding_commit_body">Your participation in this study and every task you complete contributes to advancing Alzheimer\'s Disease research.</string>
	<string name="onboarding_notifications_header1">A Note on Notifications</string>
	<string name="onboarding_notifications_body1">We use notifications to let you know it\'s time to take a test. &lt;b>Notifications are essential for the study to function properly.&lt;/b> Please allow notifications for this app throughout the duration of the study.</string>
	<string name="onboarding_notifications_popup">&lt;b>Please tap \"allow\"&lt;/b> so we can tell you when tests are available.</string>
	<string name="onboarding_notifications_header2">Please turn on notifications.</string>
	<string name="onboarding_notifications_body2_ios">You must turn on notifications for the study to function properly. Please visit the Settings App, tap Notifications, then tap EXR and turn on the Allow Notifications switch.</string>
	<string name="onboarding_notifications_body2_android">You must turn on notifications for the study to function properly. Please go to Settings and make sure notifications for {APP_NAME} are turned on.</string>
	<string name="button_home_notifications">Turn On Notificaitions</string>
	<string name="button_proceed_without_notifications">Proceed Without Notifications</string>
	<string name="popup_opensettings">We\'ll now open your Settings. Once there, tap Notifications, and turn on the Allow Notifications Switch.</string>
	<string name="button_notnow">Not now</string>
	<string name="availability_header">Availability</string>
	<string name="availability_body">Now, we\'ll ask you a few questions to help us determine when to send you those notifications. \n&lt;br />&lt;br />\n&lt;i>You will only receive notifications during your waking hours. Please set a minimum 8-hour window of availability.&lt;/i></string>
	<string name="availability_start">What time should we &lt;b>start&lt;/b> your notifications each day?</string>
	<string name="availability_stop">What time should we &lt;b>stop&lt;/b> your notifications each day?</string>
	<string name="availability_minimum_error">Please set a minimum of {HOURS} hours of availability.</string>
	<string name="availability_maximum_error">Please set a maximum of {HOURS} hours of availability.</string>
	<string name="availability_confirm">Great! We\'ll only send you reminders between &lt;b>{TIME1}&lt;/b> and &lt;b>{TIME2}&lt;/b>.</string>
	<string name="availability_change_linked">Change Times</string>
	<string name="availability_change_confirm">Great! Starting tomorrow, we\'ll only send you reminders between &lt;b>{TIME1}&lt;/b> and &lt;b>{TIME2}&lt;/b>.</string>
	<string name="faq_subpage_subheader">Tap a question to see the answer.</string>
	<string name="faq_tech_header">Technical FAQ</string>
	<string name="faq_tech_q1">What do I do if I change phones?</string>
	<string name="faq_tech_q2">The app isn\'t working. What should I do?</string>
	<string name="faq_tech_q3">What data is being collected?</string>
	<string name="faq_tech_q4">How do I check if notifications are set up correctly?</string>
	<string name="faq_tech_q5">How do I resolve two-step verification issues?</string>
	<string name="faq_tech_q6">What is the Test Scheduler Service?</string>
	<string name="faq_tech_q7">Why am I getting a message telling me to close other apps?</string>
	<string name="faq_tech_a1">You will need to re-install the app if you change to a different phone. You also will need to contact your study coordinator so that s/he can disable the app on your previous phone in order to allow you to log in from a new phone.</string>
	<string name="faq_tech_a2">Contact your study coordinator. If s/he cannot get the app to work in the moment, s/he will get back to you ASAP with a solution.</string>
	<string name="faq_tech_a3">We collect your initials via the signature page as well as the results of your neurocognitive tests. The data will save to you phone until there is a connection. Once there is a connection, your data will be securely transferred directly from the mobile app to the study database using Secure Sockets Layer (SSL) with encryption.</string>
	<string name="faq_tech_a4">Your notifications are set up when you define your availability. You will receive 4 testing notifications per day during your availability window. You can change this window via Resources in the app navigation bar.</string>
	<string name="faq_tech_a5">If you are having issues with two-step verification, the first step is to verify the phone digits on the page that asks you to enter a login verification code. These two digits should be the same as the last two digits of your phone number. If these digits do not match your phone number, please contact your study coordinator. If these digits do match your phone number, the next step is to send a new code to your phone number. You can do this by clicking \"Didn\'t receive code?\" on the page that asks you to enter a login verification code. If the new code does not work (or you do not receive a code), please contact your study coordinator.</string>
	<string name="faq_tech_a6">During testing weeks, you may see a notification that the Test Scheduler Service is running. This service allows us to send you testing notifications at specific times. Since this is required for the study, it cannot be disabled.\n\nThe Test Scheduler Service will only run during testing weeks and will not significantly impact the battery life of your phone.</string>
	<string name="faq_tech_a7">You may see this message appear during a test session: “Please close other apps to improve performance.” This may mean your device is not capable of running other apps at the same time as EXR. For the best performance, please close other apps before starting a test session.</string>
	<string name="progress_cycleorstudycomplete_body">Thank you for contributing to our research. Your time and hard work are truly valuable.</string>
	<string name="progress_studycomplete_header">You\'ve Finish the Study!</string>
	<string name="progress_studytotals_header">Study Totals</string>
	<string name="progress_studytotals_body">Your study coordinator will be in touch shortly with further instructions. In the meantime, check out all you accomplished:</string>
	<string name="progress_studytotals_earned">Total Earned</string>
	<string name="progress_studytotals_tests">Tests Taken</string>
	<string name="progress_studytotals_days">Days Tested</string>
	<string name="progress_studytotals_goals">Goals Met</string>
	<string name="progress_endoftest_nosync">It\'s taking longer than usual to sync. Check the Earnings tab later to see your updated totals.</string>
	<string name="button_back">BACK</string>
	<string name="button_next">NEXT</string>
	<string name="button_signin">SIGN IN</string>
	<string name="button_returntohome">RETURN TO HOME</string>
</resources>