<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/secondary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/background_back_button"
                android:drawableLeft="@drawable/ic_arrow_left_white"
                android:drawablePadding="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/button_back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/progress_studytotals_header"
                android:textColor="@color/white"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/textViewSubHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:paddingBottom="26dp"
                android:text="@string/progress_studytotals_body"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_above="@id/textView"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:indeterminate="true"
                android:alpha="0"
                tools:alpha="1.0"/>

            <LinearLayout
                android:id="@+id/linearLayoutResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                android:alpha="0"
                tools:alpha="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:background="#0AFFFFFF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/progress_studytotals_earned"
                        android:textColor="@color/secondaryAccent"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/textViewTotalEarned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:text="$115.75"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/progress_studytotals_tests"
                        android:textColor="@color/secondaryAccent"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/textViewTotalTests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        tools:text="302"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:background="#0AFFFFFF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/progress_studytotals_days"
                        android:textColor="@color/secondaryAccent"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/textViewTotalDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        tools:text="168"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/progress_studytotals_goals"
                        android:textColor="@color/secondaryAccent"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/textViewTotalGoals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        tools:text="13"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_gravity="right"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/progress_endoftest_nosync"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:alpha="0"
                tools:alpha="1.0"/>

        </LinearLayout>

    </ScrollView>

    <com.healthymedium.arc.ui.Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:enabled="false"
        android:text="@string/button_returntohome"
        app:buttonTheme="light"/>

</RelativeLayout>
