<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/secondary">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageViewConfetti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1.0f"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/confetti"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageViewTrophy"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:layout_marginTop="56dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_finished_trophy" />

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:text="@string/progress_studycomplete_header"
                android:textColor="@color/white"
                android:textSize="26dp" />

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/hintDark" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="20dp"
                android:text="@string/progress_cycleorstudycomplete_body"
                android:textColor="@color/white"
                android:textSize="18dp" />


        </LinearLayout>

    </ScrollView>


    <com.healthymedium.arc.ui.Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/button_next"
        app:buttonTheme="light"/>

</RelativeLayout>
